# torchfusion

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: basic.yml
data/: iris.snappy.parquet
examples/: torchfusion.rs  torchfusion_config.rs
model/: iris.spt
src/: argmax.rs  config.rs  lib.rs  udf.rs
