[package]
name = "torchfusion"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "^1.36", features = ["rt-multi-thread"]}
# datafusion = { version = "36" }
# datafusion = { git = "https://github.com/milenkovicm/arrow-datafusion-fork.git", branch = "create_function_factory" }
datafusion = { git = "https://github.com/milenkovicm/arrow-datafusion-fork.git", rev="00b8058" }
thiserror = { version = "1.0"}
log = { version = "0.4" }
tch = { version = "0.15", features = ["download-libtorch"] }

async-trait = { version = "0.1" }
parking_lot = { version = "0.12" }

argminmax ={ version = "0.6", default-features = false, features = ["arrow", "float", "half"]}

[dev-dependencies]
ctor = { version = "0.2"}
env_logger = { version = "0.11" }