[package]
name = "torchfusion"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "^1.36", features = ["rt-multi-thread"]}
datafusion = { version = "37.0" }
# datafusion = { git = "https://github.com/apache/arrow-datafusion.git", rev="799be5e76bd631608b2357dbbe600afc2cebc359" }
thiserror = { version = "1.0"}
log = { version = "0.4" }
tch = { version = "0.15", features = ["download-libtorch"] }

async-trait = { version = "0.1" }
parking_lot = { version = "0.12" }

argminmax ={ version = "0.6", default-features = false, features = ["arrow", "float", "half"]}

[dev-dependencies]
ctor = { version = "0.2"}
env_logger = { version = "0.11" }